Remove sensitive credentials from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ pickle-email-*.html
 
 # Ignore application configuration
 /config/application.yml
+/config/*.json
 
 # Ignore environment files
 .env
