Add Railway deployment configuration and guide - better alternative to Vercel for Rails

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "config.ru",
-      "use": "@vercel/ruby@3.3.0"
+      "use": "@vercel/ruby"
     }
   ],
   "routes": [
@@ -17,8 +17,6 @@
     }
   ],
   "env": {
-    "RAILS_ENV": "production",
-    "BUNDLE_DEPLOYMENT": "1",
-    "BUNDLE_WITHOUT": "development:test"
+    "RAILS_ENV": "production"
   }
 } 
